# Coca

./: bun.lockb  package.json
src-tauri/: .gitignore  Cargo.toml  rocks.jsonl  settings.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Header.svelte  Sidebar.svelte
src/routes/: +page.svelte
src/routes/applications/: +page.svelte
src/routes/applications/[slug]/: +page.svelte  +page.ts
src/routes/heatmap/: +page.svelte
src/routes/playground/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/stats/: +page.svelte
