[package]
name = "coca"
version = "1.0.0"
description = "Controller Calculator to track and assist in usage"
authors = [ "Joey Shapiro" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "system-tray", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gilrs = { version = "0.10.3", features = ["serde-serialize"] }
chrono = "0.4"
windows = { version = "0.58.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32", "Win32_UI_Accessibility"] }
rocksdb = "0.22.0"
rand = "0.8.4"
bincode = "1.3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
